--- a/index.html
+++ b/index.html
@@ -2,16 +2,50 @@
 <html>
 <head>
 	<title>Grid Practice</title>
-	<link rel="stylesheet" type="text/css" href="grid.css">
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-
-	<div class="container">
-		<div class="item item-1">1</div>
-		<div class="item item-2">2</div>
-		<div class="item item-3">3</div>
-		<div class="item item-4">4</div>
+	<div class="wrapper">
+		<div class="container">
+			<div class="header-nav">
+				Header and Nav
+			</div>
+			<div class="feed-item">
+				Feed item content...
+			</div>
+			<div class="social-card">
+				Social Card...
+			</div>
+			<div class="feed-interrupt">
+				Feed interrupt content...
+			</div>
+			<div class="feed-item">
+				Feed item content...
+			</div>
+			<div class="feed-interrupt">
+				Feed interrupt content...
+			</div>
+			<div class="social-card">
+				Social Card...
+			</div>
+			<div class="grid-overlay">
+				<div class="item item-1">1</div>
+				<div class="item item-2">2</div>
+				<div class="item item-3">3</div>
+				<div class="item item-4">4</div>
+				<div class="item item-5">5</div>
+				<div class="item item-6">6</div>
+				<div class="item item-7">7</div>
+				<div class="item item-8">8</div>
+				<div class="item item-9">9</div>
+				<div class="item item-10">10</div>
+				<div class="item item-11">11</div>
+				<div class="item item-12">12</div>
+			</div>
+		</div>
 	</div>
+
+
 
 </body>
 </html>
