--- a/index.html
+++ b/index.html
@@ -10,24 +10,32 @@
 			<div class="header-nav">
 				Header and Nav
 			</div>
-			<div class="feed-item">
-				Feed item content...
+
+			<div class="main">
+				<div class="feed-1 feed-item" data-order="1">
+					<p>FEED ITEM</p>
+				</div>
+				<div class="feed-2 social-card" data-order="2">
+					<p>SOCIAL CARD</p>
+				</div>
+				<div class="feed-3 feed-interrupt" data-order="3">
+					<p>FEED INTERRUPT</p>
+				</div>
+				<div class="feed-4 feed-item" data-order="4">
+					<p>FEED ITEM</p>
+				</div>
+				<div class="feed-5 feed-interrupt" data-order="5">
+					<p>FEED INTERRUPT</p>
+				</div>
+				<div class="feed-6 social-card" data-order="6">
+					<p>SOCIAL CARD</p>
+				</div>
 			</div>
-			<div class="social-card">
-				Social Card...
-			</div>
-			<div class="feed-interrupt">
-				Feed interrupt content...
-			</div>
-			<div class="feed-item">
-				Feed item content...
-			</div>
-			<div class="feed-interrupt">
-				Feed interrupt content...
-			</div>
-			<div class="social-card">
-				Social Card...
-			</div>
+
+			<div class="left-rail"></div>
+
+			<div class="right-rail"></div>
+
 			<div class="grid-overlay">
 				<div class="item item-1">1</div>
 				<div class="item item-2">2</div>
@@ -46,6 +54,7 @@
 	</div>
 
 
-
+	<script type="text/javascript" src="lib/jquery.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
