Cards getting reinserted based on browser width

--- a/index.html
+++ b/index.html
@@ -8,26 +8,35 @@
 	<div class="wrapper">
 		<div class="container">
 			<div class="header-nav">
-				Header and Nav
+				<p>HEADER AND NAV</p>
 			</div>
 
 			<div class="main">
-				<div class="feed-1 feed-item" data-order="1">
+				<div class="feed feed-item" data-order="1">
 					<p>FEED ITEM</p>
 				</div>
-				<div class="feed-2 social-card" data-order="2">
+				<div class="feed feed-item" data-order="2">
+					<p>FEED ITEM</p>
+				</div>
+				<div class="feed social-card" data-order="3">
 					<p>SOCIAL CARD</p>
 				</div>
-				<div class="feed-3 feed-interrupt" data-order="3">
-					<p>FEED INTERRUPT</p>
+				<div class="feed feed-interrupt" data-order="4">
+					<p>TRENDING TOPICS</p>
 				</div>
-				<div class="feed-4 feed-item" data-order="4">
+				<div class="feed feed-item" data-order="5">
 					<p>FEED ITEM</p>
 				</div>
-				<div class="feed-5 feed-interrupt" data-order="5">
-					<p>FEED INTERRUPT</p>
+				<div class="feed feed-item" data-order="6">
+					<p>FEED ITEM</p>
 				</div>
-				<div class="feed-6 social-card" data-order="6">
+				<div class="feed social-card" data-order="7">
+					<p>SOCIAL CARD</p>
+				</div>
+				<div class="feed feed-interrupt" data-order="8">
+					<p>TRENDING TOPICS</p>
+				</div>
+				<div class="feed social-card" data-order="9">
 					<p>SOCIAL CARD</p>
 				</div>
 			</div>
